tests/ensure_parsed_saved_state_deleted_dependent/ensure_parsed_saved_state_deleted_dependent.exp
==== No errors at start====
No errors!

The Flow server is currently in lazy mode and is only checking 0/3 files.
To learn more, visit flow.org/en/docs/lang/lazy-modes


==== ensure_parsed notices that B was removed ====
Error -------------------------------------------------------------------------------------------------------- C.js:1:17

Cannot resolve module `./B`. [cannot-resolve-module]

   1| import {b} from './B';
                      ^^^^^



Found 1 error

The Flow server is currently in lazy mode and is only checking 2/2 files.
To learn more, visit flow.org/en/docs/lang/lazy-modes
